# uv-workspace-test

./: pyproject.toml
.github/workflows/: ci.yaml
subproject1/: module.py  pyproject.toml
subproject1/src/subproject1/: module.py
subproject2/: Dockerfile  hello.py  pyproject.toml  test_hello.py
subproject2/tests/: test_hello.py
