[project]
name = "subproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["subproject1"]

[tool.uv.sources]
subproject1 = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
